--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>nl.knaw.meertens</groupId>
-    <artifactId>nde-registry</artifactId>
+    <groupId>nl.knaw.huc.di</groupId>
+    <artifactId>nde-termennetwerk</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>NDE Registry</name>
+    <name>NDE Termennetwerk</name>
 
     <dependencyManagement>
         <dependencies>
@@ -34,10 +34,6 @@
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
         </dependency>
-        <!--<dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-moxy</artifactId>
-        </dependency>-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -104,7 +100,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>nl.knaw.meertens.nde.Main</mainClass>
+                    <mainClass>nl.knaw.huc.di.nde.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
