--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,16 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.rdf4j</groupId>
+            <artifactId>rdf4j-model</artifactId>
+            <version>2.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.rdf4j</groupId>
+            <artifactId>rdf4j-rio-rdfxml</artifactId>
+            <version>2.4.2</version>
+        </dependency>
 
     </dependencies>
 
